reorder parent activation on destroy to fix stacked dialog focus regression. bug 122765 r=bryner,hyatt